# pls-verify

./: Anchor.toml
programs/pls-verify/: Cargo.toml
programs/pls-verify/src/: lib.rs
tests/: pls-verify.ts
